fix: set pre-wrap on inline code
Fixes #164

--- a/assets/css/code.scss
+++ b/assets/css/code.scss
@@ -8,6 +8,7 @@ kbd {
   padding: 0 0.3em;
   tab-size: 4;
   hyphens: none;
+  white-space: pre-wrap;
 }
 
 /* Code-Blöcke */
